# spotatui

./: .all-contributorsrc  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  announcements.json  default.nix  flake.nix  how_to_release.md
.github/: copilot-instructions.md
.github/workflows/: aur.yml  cd.yml  ci.yml  publish-aur.yml  toc.yml
aur/: PKGBUILD
docs/: RATATUI_0.30_CONVERSION.md
src/: app.rs  config.rs  main.rs  mpris.rs  network.rs  user_config.rs
src/audio/: capture.rs  mod.rs
src/cli/: clap.rs  cli_app.rs  handle.rs  util.rs
src/core/: app.rs  config.rs  mod.rs  sort.rs  user_config.rs
src/handlers/: announcement_prompt.rs  artist.rs  artists.rs  common_key_events.rs  help_menu.rs  input.rs  mod.rs  playlist.rs  search_results.rs  select_device.rs  settings.rs  sort_menu.rs  track_table.rs
src/infra/: discord_rpc.rs  macos_media.rs  mod.rs  mpris.rs  redirect_uri.html  redirect_uri.rs
src/infra/audio/: analyzer.rs  capture.rs  mod.rs  pipewire_capture.rs
src/infra/network/: library.rs  metadata.rs  mod.rs  playback.rs  recommend.rs  requests.rs  search.rs  user.rs  utils.rs
src/infra/player/: mod.rs  streaming.rs
src/player/: streaming.rs
src/tui/: banner.rs  cover_art.rs  mod.rs
src/tui/event/: events.rs  key.rs
src/tui/handlers/: album_list.rs  album_tracks.rs  analysis.rs  announcement_prompt.rs  artist.rs  artist_albums.rs  artists.rs  basic_view.rs  common_key_events.rs  dialog.rs  discover.rs  empty.rs  episode_table.rs  help_menu.rs  home.rs  input.rs  library.rs  mod.rs  mouse.rs  playbar.rs  playlist.rs  podcasts.rs  recently_played.rs  search_results.rs  select_device.rs  settings.rs  sort_menu.rs  track_table.rs  update_prompt.rs
src/tui/ui/: artist.rs  audio_analysis.rs  discover.rs  help.rs  home.rs  library.rs  mod.rs  player.rs  popups.rs  search.rs  settings.rs  tables.rs  util.rs
src/ui/: audio_analysis.rs  help.rs  mod.rs
