[package]
name = "Spotatui"
description = "A Spotify client for the terminal written in Rust, powered by Ratatui"
homepage = "https://github.com/LargeModGames/spotatui"
documentation = "https://github.com/LargeModGames/spotatui"
repository = "https://github.com/LargeModGames/spotatui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.33.0"
authors = ["LargeModGames <LargeModGames@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.14", features = ["cli", "env-file"] }
ratatui = { version = "0.26", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
clap = { version = "4.5", features = ["cargo"] }
clap_complete = "4.5"
unicode-width = "0.1.8"
backtrace = "0.3.57"
arboard = "3.4"
crossterm = "0.27"
tokio = { version = "1.40", features = ["full"] }
rand = "0.8.4"
anyhow = "1.0.43"
chrono = "0.4.42"
open = "5.0"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false, optional = true }
openssl = { version = "0.10", optional = true }
cpal = { version = "0.15", optional = true }
realfft = { version = "3.4", optional = true }

# Streaming dependencies (librespot)
librespot-core = { version = "0.8", optional = true }
librespot-connect = { version = "0.8", optional = true }
librespot-oauth = { version = "0.8", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9", optional = true }
librespot-playback = { version = "0.8", optional = true, default-features = false, features = ["alsa-backend"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
librespot-playback = { version = "0.8", optional = true, default-features = false, features = ["rodio-backend"] }

[features]
default = ["telemetry", "streaming"]
telemetry = ["reqwest", "reqwest/native-tls"]
streaming = ["librespot-core", "librespot-playback", "librespot-connect", "librespot-oauth"]
audio-viz = ["realfft", "pipewire"]
audio-viz-cpal = ["realfft", "cpal"]  # Alternative for Windows/macOS or if pipewire issues

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "spotatui"
