[package]
name = "spotatui"
description = "A Spotify client for the terminal written in Rust, powered by Ratatui"
homepage = "https://github.com/LargeModGames/spotatui"
documentation = "https://github.com/LargeModGames/spotatui"
repository = "https://github.com/LargeModGames/spotatui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.35.1"
authors = ["LargeModGames <LargeModGames@gmail.com>"]
edition = "2021"
license = "MIT"
exclude = [
  ".github/demo.gif",
  ".github/workflows",
  ".github/ISSUE_TEMPLATE",
  "target/",
  "snap/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.14", default-features = false, features = ["cli", "env-file", "client-reqwest", "reqwest-rustls-tls"] }
ratatui = { version = "0.30", features = ["crossterm", "layout-cache"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
clap = { version = "4.5", features = ["cargo"] }
clap_complete = "4.5"
unicode-width = "0.2.2"
backtrace = "0.3.76"
arboard = "3.4"
crossterm = "0.29"
tui-equalizer = "0.2.0-alpha"
tui-bar-graph = "0.3.1"
colorgrad = "0.8.0"
tokio = { version = "1.49", features = ["full"] }
rand = "0.8.4"
anyhow = "1.0.43"
chrono = "0.4.43"
open = "5.3"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
openssl = { version = "0.10", optional = true }
cpal = { version = "0.17", optional = true }
realfft = { version = "3.4", optional = true }

# Streaming dependencies (librespot)
librespot-core = { version = "0.8", optional = true }
librespot-connect = { version = "0.8", optional = true }
librespot-oauth = { version = "0.8", optional = true }
librespot-metadata = { version = "0.8", optional = true }
futures = "0.3.31"

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
pipewire = { version = "0.9", optional = true }
librespot-playback = { version = "0.8", optional = true, default-features = false, features = ["alsa-backend"] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
librespot-playback = { version = "0.8", optional = true, default-features = false, features = ["rodio-backend"] }

[target.'cfg(target_os = "windows")'.dependencies]
# On Windows we default to rodio for audio output.
# Without this, librespot-playback falls back to the `pipe` sink which writes raw audio bytes
# to stdout (breaking the TUI and producing no audible output).
librespot-playback = { version = "0.8", optional = true, default-features = false, features = ["rodio-backend"] }

# MPRIS D-Bus support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.9", optional = true }

# macOS: librespot-playback + Now Playing / Media Key support
# On macOS we don't specify a default audio backend here - the CI uses portaudio-backend feature flag.
# Rodio has compatibility issues with macOS CoreAudio and Bluetooth devices (AirPods, etc.)
# causing SIGSEGV crashes. See Issue #9 and #20.
[target.'cfg(target_os = "macos")'.dependencies]
librespot-playback = { version = "0.8", optional = true, default-features = false }
objc2-media-player = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2 = { version = "0.6", optional = true }
block2 = { version = "0.6", optional = true }

[features]
default = ["telemetry", "streaming", "audio-viz-cpal", "mpris", "macos-media"]
telemetry = ["reqwest", "reqwest/rustls-tls"]
streaming = ["librespot-core", "librespot-playback", "librespot-connect", "librespot-oauth", "librespot-metadata"]
# Audio backend features
alsa-backend = ["streaming", "librespot-playback/alsa-backend"]
pulseaudio-backend = ["streaming", "librespot-playback/pulseaudio-backend"]
rodio-backend = ["streaming", "librespot-playback/rodio-backend"]
portaudio-backend = ["streaming", "librespot-playback/portaudio-backend"]
jackaudio-backend = ["streaming", "librespot-playback/jackaudio-backend"]
rodiojack-backend = ["streaming", "librespot-playback/rodiojack-backend"]
sdl-backend = ["streaming", "librespot-playback/sdl-backend"]
gstreamer-backend = ["streaming", "librespot-playback/gstreamer-backend"]
audio-viz = ["realfft", "pipewire"]
audio-viz-cpal = ["realfft", "cpal"]  # Alternative for Windows/macOS or if pipewire issues
mpris = ["mpris-server", "streaming"]  # MPRIS D-Bus integration (Linux only, requires streaming)
macos-media = ["objc2-media-player", "objc2-foundation", "objc2", "block2", "streaming"]  # macOS Now Playing integration

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "spotatui"

[profile.release]
codegen-units = 1  # Better optimization
lto = true         # Link-time optimization
opt-level = "s"    # Prioritize small binary size
strip = true       # Remove debug symbols
